Actualizar certificados en certificates.html: modificar títulos y enlaces de cursos, eliminar certificados obsoletos.

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -56,18 +56,40 @@
         <div class="grid-container">
 
             <!-- Certificates -->
+            
             <div class="cert-card">
-                <h3>Curso de C# intermedio</h3>
+                <h3>Java</h3>
                 <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/RYEEKZMGE4#LpEdxvODktEr" class="btn-cert" target="_blank">Ver certificado</a>
+                <p class="date">Febrero/Marzo 2025</p>
+                <a href="https://drive.proton.me/urls/MM3JFPZJ98#kIsXIu7bBobb" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
-                
+
             <div class="cert-card">
-                <h3>Curso de C# para principiantes</h3>
+                <h3>Testing</h3>
                 <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/QQQB1QWXDC#9AtmayDzjH6d" class="btn-cert" target="_blank">Ver certificado</a>
+                <p class="date">Febrero/Marzo 2025</p>
+                <a href="https://drive.proton.me/urls/WY93MJF1YR#ynPM489sNM8p" class="btn-cert" target="_blank">Ver carpeta</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero/Marzo 2025</p>
+                <a href="https://drive.proton.me/urls/V7Z2RC41SC#Rie5TM1OGrfE" class="btn-cert" target="_blank">Ver carpeta</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>C#</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero/Marzo 2025</p>
+                <a href="https://drive.proton.me/urls/F44HWYPCRG#mOoYlVAcUBdv" class="btn-cert" target="_blank">Ver carpeta</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>SQL</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero/Marzo 2025</p>
+                <a href="https://drive.proton.me/urls/PQGM73V080#i7gqU5P5HjCc" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
 
             <div class="cert-card">
@@ -85,101 +107,10 @@
             </div>
 
             <div class="cert-card">
-                <h3>Java desde 0: Records, Genéricos y Colecciones</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/5FWYSMCNXG#jMKbEKTbzUT1" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Java desde 0: Orientación a Objetos</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/60ZFY8GFRR#RZLfXlxnUrRm" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Java desde 0: Introducción</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/7D8672S0ZR#5QZMcqB30uYF" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
                 <h3>Operaciones fundamentales sobre procesos de Linux y editores de terminal</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/HJ8D6Y3JDR#gI1HIkozSPse" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Automatizaciones</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/TTDG1VYMX0#fT0gcGNKjLsw" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Configuración de la organización y gestión de usuarios</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/WZ94KKMF1M#DQ2HXCaTcWS1" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Desarrollo de componentes custom para Flows</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/9GHKDT4JG8#GWKRid53z9kg" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Informes y Paneles</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/C2EH4QX0Y0#LtcuJ7aBwQ6R" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Migración de Workflow Rules y Process Builder a Flows</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/XHCJSX1BVC#wCZrLw0L00tN" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Objetos estándar y personalizados</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/ND0N1AHPNW#ZSRUvTC3b4ce" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Seguridad y acceso a datos</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/W1PRWFCZV0#WcvYnFazDEdV" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Salesforce: Uso de Flows para automatización de procesos</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Marzo 2025</p>
-                <a href="https://drive.proton.me/urls/5GEMVTCD5G#QlA4HAntS7oC" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Administración de BBDD con MySQL: Procedicimientos almacenados y relaciones</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/BY3X0NBBCW#8ZuJmsiPf0ST" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Administración de BBDD con MySQL: Sentencias DDL y DML</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/TB94H830PR#UyIkfnXOQwvA" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
             <div class="cert-card">
@@ -197,38 +128,10 @@
             </div>
 
             <div class="cert-card">
-                <h3>Crea aplicaciones de escritorio con JavaFX</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/H6C69TYP70#U0HH8APavKsm" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Creación de BBDD para eCommerce con MySQL</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/AS23QHDZTM#gH5XD4HxZxOO" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
                 <h3>Curso de HTML5 y CSS3</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/T207M206HM#JPC6ozM0LwoB" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de Introducción a pruebas unitarias automáticas ocn JUnit 5</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/H1MQAXW2S4#9tHnO9s6oKY9" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de Java XML</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/PPA45P4K1R#uNn60IhESSLA" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
             <div class="cert-card">
@@ -243,104 +146,6 @@
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/X51V0C5HNM#DlYx6c3XkMrJ" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de SQL desde Cero</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/ZJEYAC23YM#8Um7uX2aQZyc" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de TDD: Test-drive development</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/6ZWA3D5BF4#4YNrbKVi2Gkv" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de creación y administración de Bases de Datos SQL</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/JGVWV5PX98#sK0CuyMS90IP" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de introducción al testing</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/1NZY1N6W1W#c2ChDMcZCIMb" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Curso de testing con BDD</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/5V68Y7DYF4#Q3coRFoqdhmP" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Herramientas de testing para un desarrollador Java</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/9AP4RB2X64#fCzb6LezoiNH" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Implementación de Alta Disponibilidad y Réplicas en SQL</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/H9QTTK7EQC#aM2LaUeBj0iu" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Laboratorio de SalesForce: ¿Qué es y qué nos ofrece?</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/D0FEWB4YQ0#ZW0LkLBTdf09" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Manejo profundo de SQL Server</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/9F99FAZDDM#KKyfcwPEzStI" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Modularización con Java Jigsaw</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/E1J7F0NKAW#XCbKJtykcnYN" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Patron de Diseño de Estrategia con C#</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/3QYV5Y8TZG#DhDlgLhQEFBl" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Profundizado en la Seguridad en SQL Server</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/BA48X0NEJ0#OukR0gwajci6" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>SQL Server desde Cero</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/X90T6DFRDC#Nfi2KO9nvEcw" class="btn-cert" target="_blank">Ver certificado</a>
-            </div>
-
-            <div class="cert-card">
-                <h3>Seguridad y Backups en SQL Server</h3>
-                <p class="issuer">OpenWebinars</p>
-                <p class="date">Febrero 2025</p>
-                <a href="https://drive.proton.me/urls/SMDYFCKFYG#2qQoKODxxsu0" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
             <div class="cert-card">
