Reestructurar secciones de certificados en HTML y CSS: agregar secciones de carpetas e individuales, mejorar estilos y organización de tarjetas.

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -50,105 +50,152 @@
         <h1>Mis certificados</h1>
     </section>
 
-    <!-- Certificates Grid -->
-    <section id="certificates-grid">
-        <h2>Certificados obtenidos</h2>
+    <!-- Certificate Folders Section -->
+    <section id="certificates-folders">
+        <h2>Colecciones de certificados</h2>
         <div class="grid-container">
-
-            <!-- Certificates -->
             
-            <div class="cert-card">
+            <div class="cert-card folder-card">
+                <div class="card-icon">
+                    <i class="fas fa-folder"></i>
+                </div>
                 <h3>Java</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero/Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/MM3JFPZJ98#kIsXIu7bBobb" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card folder-card">
+                <div class="card-icon">
+                    <i class="fas fa-folder"></i>
+                </div>
                 <h3>Testing</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero/Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/WY93MJF1YR#ynPM489sNM8p" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card folder-card">
+                <div class="card-icon">
+                    <i class="fas fa-folder"></i>
+                </div>
                 <h3>Salesforce</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero/Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/V7Z2RC41SC#Rie5TM1OGrfE" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card folder-card">
+                <div class="card-icon">
+                    <i class="fas fa-folder"></i>
+                </div>
                 <h3>C#</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero/Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/F44HWYPCRG#mOoYlVAcUBdv" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card folder-card">
+                <div class="card-icon">
+                    <i class="fas fa-folder"></i>
+                </div>
                 <h3>SQL</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero/Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/PQGM73V080#i7gqU5P5HjCc" class="btn-cert" target="_blank">Ver carpeta</a>
             </div>
+        </div>
+    </section>
 
-            <div class="cert-card">
+    <!-- Individual Certificates Section -->
+    <section id="certificates-individual">
+        <h2>Certificados individuales</h2>
+        <div class="grid-container">
+
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Curso de Git</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/2ER11G2DXC#43mMfSlAnBJu" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Curso de Introducción a la programación con Pseudocódigo</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/XQWBYNVJXW#YSHCGyxYZa4w" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Operaciones fundamentales sobre procesos de Linux y editores de terminal</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
                 <a href="https://drive.proton.me/urls/HJ8D6Y3JDR#gI1HIkozSPse" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Aumenta tu productividad con IntelliJ</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/8F46SBF63G#BM0yqTkdMxfS" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Aumenta tu productividad con Visual Studio Code</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/WEEND745WW#qPjp2M3Qj0A0" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Curso de HTML5 y CSS3</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/T207M206HM#JPC6ozM0LwoB" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Curso de Odoo</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/GZTC9G3ESW#s0oLJpEzVZtx" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>Curso de Solid y patrones de diseño</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
                 <a href="https://drive.proton.me/urls/X51V0C5HNM#DlYx6c3XkMrJ" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
-            <div class="cert-card">
+            <div class="cert-card individual-card">
+                <div class="card-icon">
+                    <i class="fas fa-certificate"></i>
+                </div>
                 <h3>AWS Cloud Quest: Cloud Practitioner</h3>
                 <p class="issuer">Amazon Web Services (AWS)</p>
                 <p class="date">Enero 2025</p>
@@ -156,7 +203,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Footer -->
     <footer class="footer">
