Actualizar sección de Formación Académica y Experciencia Laboral

--- a/index.html
+++ b/index.html
@@ -87,17 +87,31 @@
                         <h3>Formación Académica</h3>
                         
                         <div class="timeline-item">
-                            <h4>Grado en Ingeniería Informática</h4>
-                            <div class="institution">Universidad de Barcelona</div>
-                            <div class="date">2020 - 2024</div>
-                            <p>Especialización en Desarrollo de Software y Sistemas Distribuidos. Proyecto final centrado en aplicaciones web modernas.</p>
+                            <h4>Desarrollo de Aplicaciones Multiplataforma</h4>
+                            <div class="institution">FP Sevilla Davante MEDAC</div>
+                            <div class="date">Septiembre 2024 - Presente</div>
+                            <p>Formación centrada en la creación de software adaptable para distintos dispositivos y sistemas operativos.</p>
                         </div>
 
                         <div class="timeline-item">
-                            <h4>Máster en Desarrollo Web Full Stack</h4>
-                            <div class="institution">Instituto Tecnológico</div>
-                            <div class="date">2024 - Presente</div>
-                            <p>Profundización en tecnologías modernas de desarrollo web, arquitecturas cloud y metodologías ágiles.</p>
+                            <h4>Preliminary English Test - B1</h4>
+                            <div class="institution">Cambridge English</div>
+                            <div class="date">Enero 2024 - Julio 2024</div>
+                            <p>Certificado acreditando competencias intermedias en comprensión, expresión oral y escrita en inglés.</p>
+                        </div>
+
+                        <div class="timeline-item">
+                            <h4>Sistemas electrotécnicos y atomatizados</h4>
+                            <div class="institution">Salesianos Stma. Trinidad</div>
+                            <div class="date">Septiembre 2019 - Junio 2021</div>
+                            <p>Estudios con énfasis en la integración de tecnologías eléctricas y de control para procesos automatizados.</p>
+                        </div>
+
+                        <div class="timeline-item">
+                            <h4>Bachillerato Tecnológico</h4>
+                            <div class="institution">IES Chaves Nogales</div>
+                            <div class="date">Septiembre 2016 - Junio 2018</div>
+                            <p>Formación en ciencias, matemáticas y tecnologías, orientado al desarrollo de competencias en ingeniería y sistemas.</p>
                         </div>
                     </div>
 
@@ -105,23 +119,37 @@
                         <h3>Experiencia Laboral</h3>
                         
                         <div class="timeline-item">
-                            <h4>Desarrollador Frontend Junior</h4>
-                            <div class="institution">TechStartup SL</div>
-                            <div class="date">Marzo 2024 - Presente</div>
-                            <p>Desarrollo de interfaces de usuario responsivas con React y TypeScript. Colaboración en equipo usando metodologías ágiles.</p>
+                            <h4>Personal de restaurante</h4>
+                            <div class="institution">Burger King Spain SLU</div>
+                            <div class="date">Junio 2024 - Presente</div>
+                            <p>Experiencia en atención al cliente, operaciones de caja, preparación de alimentos y mantenimiento de estándares de calidad e higiene.</p>
                         </div>
 
                         <div class="timeline-item">
-                            <h4>Prácticas en Desarrollo Web</h4>
-                            <div class="institution">Digital Agency</div>
-                            <div class="date">Septiembre 2023 - Febrero 2024</div>
-                            <p>Desarrollo de sitios web corporativos y e-commerce. Experiencia con CMS y optimización SEO.</p>
+                            <h4>Comercial (Dpto. Autoconsumo)</h4>
+                            <div class="institution">Enaltia Solar SL</div>
+                            <div class="date">Mayo 2022 - Mayo 2023</div>
+                            <p>Comercial responsable de captación de clientes, asesoramiento técnico y cierre de ventas de soluciones solares.</p>
+                        </div>
+
+                        <div class="timeline-item">
+                            <h4>Comercial (Call Center)</h4>
+                            <div class="institution">SBR Infinity Marketing</div>
+                            <div class="date">Febrero 2022 - Mayo 2022</div>
+                            <p>Comercial en call center especializado en energía, gestionando ventas y atención a clientes de tarifas de luz y gas.</p>
+                        </div>
+
+                        <div class="timeline-item">
+                            <h4>Comercial (Dpto. Ofertas)</h4>
+                            <div class="institution">Gómez Maqueda SL</div>
+                            <div class="date">Marzo 2021 - Noviembre 2021</div>
+                            <p>Comercial gestionando promoción de productos, atención a clientes y seguimiento de ventas para optimizar resultados.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="download-cv">
-                    <a href="../CV/gabriel_sanchez_cv.pdf" target="_blank" class="btn-cv">
+                    <a href="SOURCES/" target="_blank" class="btn-cv">
                         <i class="fas fa-download"></i> Descargar CV
                     </a>
                 </div>
