Modificar la sección de proyectos destacados, añadiendo los proyectos principales que quiero que se vean en el porfolio y darle estilo añadiendo imagenes y efectos.

--- a/index.html
+++ b/index.html
@@ -163,74 +163,64 @@
                 
                 <div class="projects-grid">
                     <div class="project-card">
-                        <div class="project-image">
-                            <i class="fas fa-shopping-cart"></i>
-                        </div>
+                        <div class="project-image1"></div>
                         <div class="project-content">
-                            <h3>E-commerce Platform</h3>
+                            <h3>Blank Urban Web</h3>
                             <div class="tech-tags">
-                                <span class="tech-tag">React</span>
-                                <span class="tech-tag">Node.js</span>
-                                <span class="tech-tag">MongoDB</span>
-                                <span class="tech-tag">Stripe</span>
+                                <span class="tech-tag">HTML</span>
+                                <span class="tech-tag">CSS</span>
                             </div>
-                            <p>Plataforma de comercio electrónico completa con carrito de compras, pasarela de pagos integrada, panel de administración y sistema de gestión de inventarios.</p>
-                            <a href="https://github.com/gabiisnchez/ecommerce-project" class="btn-project" target="_blank">
+                            <p>Página web estática que combina diseño minimalista, estructura organizada y recursos multimedia para representar la identidad de la marca Blank Urban.</p>
+                            <a href="https://github.com/gabiisnchez/Blank-Urban-Web" class="btn-project" target="_blank">
                                 Ver en GitHub <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
 
                     <div class="project-card">
-                        <div class="project-image">
-                            <i class="fas fa-tasks"></i>
-                        </div>
+                        <div class="project-image2"></div>
                         <div class="project-content">
-                            <h3>Task Management App</h3>
+                            <h3>LaLiga Fantasy Generator</h3>
                             <div class="tech-tags">
-                                <span class="tech-tag">Vue.js</span>
-                                <span class="tech-tag">Firebase</span>
-                                <span class="tech-tag">PWA</span>
+                                <span class="tech-tag">Java</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">SQL</span>
                             </div>
-                            <p>Aplicación web progresiva para gestión de tareas con funcionalidades offline, sincronización en tiempo real y notificaciones push.</p>
-                            <a href="https://github.com/gabiisnchez/task-manager" class="btn-project" target="_blank">
+                            <p>Aplicación que permite simular una temporada completa de LaLiga Española de fútbol, consultar estadísticas, y gestionar los datos de la temporada simulada.</p>
+                            <a href="https://github.com/gabiisnchez/LaLiga-Fantasy-Generator" class="btn-project" target="_blank">
                                 Ver en GitHub <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
 
                     <div class="project-card">
-                        <div class="project-image">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
+                        <div class="project-image3"></div>
                         <div class="project-content">
-                            <h3>Analytics Dashboard</h3>
+                            <h3>Interfaz GUI Designer</h3>
                             <div class="tech-tags">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Django</span>
-                                <span class="tech-tag">D3.js</span>
-                                <span class="tech-tag">PostgreSQL</span>
+                                <span class="tech-tag">Java</span>
+                                <span class="tech-tag">Java Swing</span>
+                                <span class="tech-tag">GUI Designer</span>
+                                <span class="tech-tag">IntelliJ</span>
                             </div>
-                            <p>Dashboard interactivo para análisis de datos con visualizaciones dinámicas, filtros avanzados y exportación de reportes en múltiples formatos.</p>
-                            <a href="https://github.com/gabiisnchez/analytics-dashboard" class="btn-project" target="_blank">
+                            <p>Ejemplos de interfaces de inicio de sesión desarrollados con Swing UI Designer, mostrando distintos estilos y componentes gráficos sin lógica de validación.</p>
+                            <a href="https://github.com/gabiisnchez/Interfaz_de_Login_en_IntelliJ" class="btn-project" target="_blank">
                                 Ver en GitHub <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
 
                     <div class="project-card">
-                        <div class="project-image">
-                            <i class="fas fa-mobile-alt"></i>
-                        </div>
+                        <div class="project-image4"></div>
                         <div class="project-content">
-                            <h3>Weather Mobile App</h3>
+                            <h3>FitBreak</h3>
                             <div class="tech-tags">
-                                <span class="tech-tag">React Native</span>
-                                <span class="tech-tag">OpenWeather API</span>
-                                <span class="tech-tag">Redux</span>
+                                <span class="tech-tag">Java</span>
+                                <span class="tech-tag">Android Studio</span>
+                                <span class="tech-tag">Gradle</span>
                             </div>
-                            <p>Aplicación móvil multiplataforma para consulta del tiempo con geolocalización, pronósticos extendidos y notificaciones de alertas meteorológicas.</p>
-                            <a href="https://github.com/gabiisnchez/weather-app" class="btn-project" target="_blank">
+                            <p>FitBreak es una app móvil en desarrollo que te recuerda mediante notificaciones hacer pausas activas después de varias horas frente a una pantalla.</p>
+                            <a href="https://github.com/gabiisnchez/FitBreak_mobile" class="btn-project" target="_blank">
                                 Ver en GitHub <i class="fab fa-github"></i>
                             </a>
                         </div>
