Mejorar comentarios para un mejor entendimiento del código

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -13,12 +13,12 @@
     <!-- Navigation bar -->
     <header class="header">
 
-        <!-- Icono de usuario (solo móvil) -->
+        <!-- User icon -->
         <div class="icon"><i class="fas fa-user"></i></div>
 
         <div class="header-container">
             
-            <!-- Nav escritorio -->
+            <!-- Nav desktop -->
             <nav class="nav" id="nav-menu-desktop">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -28,14 +28,14 @@
             </nav>
         </div>
 
-        <!-- Botón hamburguesa -->
+        <!-- Hamburger button -->
         <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </button>
         
-        <!-- Overlay menú móvil -->
+        <!-- Nav mobile -->
         <nav class="nav overlay" id="nav-menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
