--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -13,10 +13,12 @@
     <!-- Navigation bar -->
     <header class="header">
 
-        <!-- Icono de usuario (solo móvil) -->
+        <!-- User icon -->
         <div class="icon"><i class="fas fa-user"></i></div>
 
         <div class="header-container">
+
+            <!-- Nav desktop -->
             <nav class="nav" id="nav-menu-desktop">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -26,12 +28,14 @@
             </nav>
         </div>
 
+        <!-- Hamburger button -->
         <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </button>
 
+        <!-- Nav mobile -->
         <nav class="nav overlay" id="nav-menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -100,7 +104,6 @@
                         <button type="submit" class="btn-send">Enviar mensaje</button>
                     </form>
                 </div>
-
             </div>
         </section>
     </main>
@@ -109,6 +112,7 @@
     <footer class="footer">
         <p>&copy; 2025 Gabriel Sanchez Heredia. Todos los derechos reservados.</p>
 
+        <!-- Social Networks -->
         <div class="social-icons">
             <a href="mailto:gabiisnchez@proton.me" title="Envíame un correo"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/gabrielsanher" target="_blank" title="Mi perfil de LinkedIn"><i class="fab fa-linkedin"></i></a>
