Añadir funcionalidad del boton "Descargar CV"

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="download-cv">
-                    <a href="SOURCES/" target="_blank" class="btn-cv">
+                    <a href="SOURCES/CV/CV - Gabriel Sánchez Heredia (Octubre 2025).pdf" target="_blank" class="btn-cv">
                         <i class="fas fa-download"></i> Descargar CV
                     </a>
                 </div>
